test/bad/functions/variadic07.px

func f(Int args...) def
    return

f' = f
